# pubarchiver

./: .gitignore  CHANGES.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  codemeta.json  package_portico.py  requirements.txt  setup.cfg  setup.py
.github/scripts/: mailgun.sh  slack.sh
.github/workflows/: archive-in-portico.yml  codeql-analysis.yml  upload-to-pmc.yml
dev/icon/: README.md
dev/initial-version/: README.md
dev/portico/sample-accepted-by-portico/W27P4P/: W27P4P.xml
dev/portico/sample-accepted-by-portico/micropub.biology.000081/: micropub.biology.000081.xml
dev/sample-data/: README.md  archive-list.xml
dev/sample-data/sample-article-jats/: micropub.biology.000230.xml
microarchiver/: __init__.py  __main__.py  __version__.py  debug.py  exceptions.py  files.py  messages.py  messages_styles.py  network.py
microarchiver/data/JATS-Archiving-1-2-MathML3-DTD/: BITS-embedded-index2.ent  JATS-archivecustom-classes1.ent  JATS-archivecustom-mixes1.ent  JATS-archivecustom-models1.ent  JATS-articlemeta1.ent  JATS-backmatter1.ent  JATS-common-atts1.ent  JATS-default-classes1.ent  JATS-funding1.ent  JATS-journalmeta1.ent  JATS-modules1.ent  JATS-nlmcitation1.ent  JATS-para1.ent  JATS-phrase1.ent  JATS-references1.ent  JATS-section1.ent  JATS-xmlspecchars1.ent
microarchiver/ui/: __init__.py  base.py  cli.py  gui.py  styled.py  text_styles.py
pubarchiver/: __init__.py  __main__.py  article.py  exceptions.py
pubarchiver/data/: README.md
pubarchiver/data/JATS-Archiving-1-2-MathML3-DTD/: JATS-XHTMLtablesetup1.ent  JATS-ali-namespace1.ent  JATS-archivearticle1-mathml3.dtd  JATS-archivecustom-modules1.ent  JATS-chars1.ent  JATS-common1.ent  JATS-default-mixes1.ent  JATS-display1.ent  JATS-format1.ent  JATS-link1.ent  JATS-list1.ent  JATS-math1.ent  JATS-mathml3-mathmlsetup1.ent  JATS-mathml3-modules1.ent  JATS-notat1.ent  JATS-related-object1.ent  catalog-jats-v1-2-no-base.xml  catalog-jats-v1-2-with-base.xml
pubarchiver/journals/: __init__.py  base.py  micropublication.py  prompt.py
scripts/: README.md  archive-in-portico  archive-micropublication  crontab.template  helpers.sh  test-pmc.sh  test-portico.sh  upload-to-pmc
