# =============================================================================
# @file    setup.cfg
# @brief   Package metadata.
# @author  Michael Hucka <mhucka@caltech.edu>
# @license Please see the file named LICENSE in the project directory
# @website https://github.com/caltechlibrary/microarchiver
#
# Note: the current version number is maintained in the file VERSION.txt
# Don't forget to update VERSION.txt when making new releases!
#
# =============================================================================

[metadata]
name             = microarchiver
version          = 1.7.0
summary          = Archives articles from microPublication.org
description      = Create archives of articles from microPublication.org.
author           = Michael Hucka, Tom Morrell
author_email     = mhucka@caltech.edu, tmorrell@library.caltech.edu
license          = BSD 3-clause
license_files    = LICENSE
url              = https://github.com/caltechlibrary/microarchiver
# The remaining items below are used by PyPI.
project_urls     =
  Source Code    = https://github.com/caltechlibrary/microarchiver
  Bug Tracker    = https://github.com/caltechlibrary/microarchiver/issues
keywords         = journal publishing, archiving
classifiers      =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Programming Language :: Python
  Programming Language :: Python :: 3.5
  Topic :: System :: Archiving 
  Topic :: System :: Archiving :: Packaging
  Topic :: Utilities
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
scripts  = bin/microarchiver
zip_safe = False
python_requires = >= 3.5

[options.package_data]
* = 
  data/JATS-Archiving-1-2-MathML3-DTD/*
  data/JATS-Archiving-1-2-MathML3-DTD/*/*


