# =============================================================================
# @file    setup.cfg
# @brief   Package metadata.
# @author  Michael Hucka <mhucka@caltech.edu>
# @license Please see the file named LICENSE in the project directory
# @website https://github.com/caltechlibrary/pubarchiver
#
# Note: the current version number is maintained in the file VERSION.txt
# Don't forget to update VERSION.txt when making new releases!
#
# =============================================================================

[metadata]
name             = pubarchiver
version          = 2.1.1
summary          = Archive journal articles into Portico and PMC
description      = Automation for archiving journals hosted by the Caltech Library
author           = Michael Hucka, Tom Morrell
author_email     = mhucka@caltech.edu, tmorrell@library.caltech.edu
license          = BSD 3-clause
license_files    = LICENSE
url              = https://github.com/caltechlibrary/pubarchiver
# The remaining items below are used by PyPI.
project_urls     =
  Source Code    = https://github.com/caltechlibrary/pubarchiver
  Bug Tracker    = https://github.com/caltechlibrary/pubarchiver/issues
keywords         = journal publishing, archiving
classifiers      =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Programming Language :: Python
  Programming Language :: Python :: 3.5
  Topic :: System :: Archiving 
  Topic :: System :: Archiving :: Packaging
  Topic :: Utilities
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = False
python_requires = >= 3.5

[options.entry_points]
console_scripts = 
  pubarchiver = pubarchiver.__main__:console_scripts_main

[options.package_data]
* = 
  data/JATS-Archiving-1-2-MathML3-DTD/*
  data/JATS-Archiving-1-2-MathML3-DTD/*/*
